--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Corben" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Ubuntu:bold' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="assets/main.css" />
+  <link rel="stylesheet" href="main.css" />
   <title>Code Breaker</title>
 </head>
 
@@ -77,7 +77,7 @@
   </div>
 
 
-  <script src="assets/main.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
