--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Corben" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Ubuntu:bold' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="main.css" />
   <title>Code Breaker</title>
 </head>
@@ -76,6 +77,11 @@
       </div>
   </div>
 
+  <footer>
+    <hr>
+     <p>made by nicolehli</p>
+			<a href="http://www.github.com/nicolehli" target="_blank"><i class="fa fa-github"></i></a>
+	</footer>
 
   <script src="main.js"></script>
 </body>
