Made legend more clear

--- a/index.html
+++ b/index.html
@@ -61,17 +61,18 @@
           <li>You lose if you fail to guess the code under 10 guesses.</li>
         </ul>
         <h2>Results</h2>
-        <ul>
+        <ul id=legend>
           <li>
             <span class="glyphicon glyphicon-ok"></span> Indicates a number is in the correct place.
             <li>
-              <span class="glyphicon glyphicon-transfer"></span> Indicates a number is part of the code, but not in the right position.
-            </li>
-            <li>
-              <span class="glyphicon glyphicon-transfer"></span> Doesn't consider how many times a number exists in the code.
+              <span class="glyphicon glyphicon-transfer"></span> Indicates a number is part of the code, but not in the right position.  **
             </li>
             <li>
               <span class="glyphicon glyphicon-remove"></span> Indicates a number is not part of the code.
+            </li>
+            <br>
+            <li>
+                 ** Doesn't consider how many times a number exists in the code.
             </li>
         </ul>
       </div>
