added input clearing and smoe styling

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="guessing-div" class="row form-inline">
           <input type="hidden" id="attempt" />
           <input type="hidden" id="answer" />
-          <input id="user-guess" class="form-control" type="number" />
+          <input id="user-guess" class="form-control" type="number" ="guess()" placeholder="Enter your guess here." />
           <button class="btn btn-primary" onclick="guess()">Submit</button>
         </div>
       </center>
@@ -83,6 +83,7 @@
      <p>made by nicolehli</p>
 			<a href="http://www.github.com/nicolehli" target="_blank"><i class="fa fa-github"></i></a>
 	</footer>
+
 
   <script src="main.js"></script>
 </body>
